# BNW-django-blog

./: Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
blog_wnb/: asgi.py  settings.py  views.py  wsgi.py
blog_wnb/blog_wnb/: asgi.py  settings.py  urls.py  views.py
blog_wnb/posts/: forms.py  urls.py  views.py
blog_wnb/posts/migrations/: 0004_alter_posts_content_id.py
blog_wnb/posts/templates/posts/: create_post.html
blog_wnb/static/css/: style.css  style.css.map  style.sass
blog_wnb/static/css/base/: _reset.sass
blog_wnb/static/css/layouts/: _posts.sass  _template.sass
blog_wnb/static/css/pages/: _login.sass  _register.sass
blog_wnb/templates/: index.html  posts.html  template.html
blog_wnb/users/: admin.py  forms.py  models.py  urls.py  views.py
blog_wnb/users/migrations/: 0001_initial.py  0002_user_profile_slug.py  0003_alter_user_profile_profile_pic.py
blog_wnb/users/templates/users/: login.html  my_profile.html  register.html
posts/: admin.py  models.py  views.py
posts/migrations/: 0001_initial.py  0002_rename_content_description_posts_description_and_more.py  0003_alter_posts_image.py
posts/templates/posts/: create_post.html
static/css/: style.css.map  style.sass
static/css/layouts/: _template.sass
static/css/pages/: _createPost.sass  _register.sass  _userInfo.sass
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_profile_user_id.py
users/templates/users/: login.html  register.html  user_profile.html
