[tool.poetry]
name = "wnb-django-blog"
version = "0.1.0"
description = "WNB Blog is a Django project. Developed as the final assignment for ETIC Algarve's Backend 1 module"
authors = ["Mccartheney <mccartheney@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
